[gd_scene load_steps=2 format=3 uid="uid://dq0eeykncyxkp"]

[ext_resource type="Script" path="res://scripts/ranch/ui/TutorialOverlay.gd" id="1_tutorial_overlay"]

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_tutorial_overlay")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="HighlightOverlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StepCard" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StepCard"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="StepCard/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Tutorial Step Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="StepCard/VBoxContainer"]
layout_mode = 2

[node name="BodyLabel" type="Label" parent="StepCard/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
text = "This is the tutorial body text that explains what the player should do next. It can be multiple lines long."
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="StepCard/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SkipButton" type="Button" parent="StepCard/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Skip Tutorial"

[node name="Spacer" type="Control" parent="StepCard/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="StepCard/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Next"
